2006-11-27  Christian Stimming <stimming@tuhh.de>

	* guide/C/ch_loans.xml: Added update from Dave Herman
	* guide/C/ch_invest.xml: Added update from Dave Herman

2006-11-04  Chris Lyttle  <chris@wilddev.net>
	
	* guide/C/ch_loans.xml: fix png name

2006-10-21  Chris Lyttle  <chris@wilddev.net>

	* guide/C/ch_invest.xml: fix png name

2006-10-08  Chris Lyttle  <chris@wilddev.net>

	* guide/C/gnucash-guide.xml: Updated authors and version
	* help/C/gnucash-help.xml: Updated authors and version
	* help/C/usage.xml: Added update from Dave Herman
	* help/C/figures/Pref_Accnts.png: Added update from Dave Herman
	* help/C/figures/Pref_Business.png: Added update from Dave Herman
	* help/C/figures/Pref_AccntPeriod.png: Added update from Dave Herman
	* help/C/figures/Pref_DateTime.png: Added update from Dave Herman
	* help/C/figures/AccountReg_Screen.png: Added update from Dave Herman
	* help/C/figures/Report_Screen.png: Added update from Dave Herman
	* help/C/figures/AccountTree_Screen.png: Added update from Dave Herman
	* help/C/gettingstarted.xml: Added update from Dave Herman
	* help/C/custom.xml: Added update from Dave Herman
	* NEWS: Updated for 2.0.1 release
	* configure.in: Updated for 2.0.1 release

2006-09-13  Christian Stimming <stimming@tuhh.de>

	* guide/C/appendixa.xml: Add additional namespaces for XSL
	Transformations. bug#337692.

2006-08-14  David Hampton  <hampton@employees.org>

	* guide/C/ch_txns.xml: Add some text to the "Entry Shortcuts"
	section for the Transfer field. Fixes #343244 (part 2).

	* guide/C/ch_txns.xml:
	* guide/C/ch_basics.xml: Update the text to distinguish between
	access (underlined) keys and actual menu shortcuts (listed at the
	end of a menu item). Fixes #343244 (part 1).

2006-07-09  Chris Lyttle  <chris@wilddev.net>

	* help/C/gettingstarted.xml: Added update from Dave Herman
	* Makefile.am: remove svn files from tarball
	* README: Updated for 2.0.0 release
	* NEWS: Updated for 2.0.0 release