@@ -1,7 +1,8 @@
 <!--
       (Do not remove this comment block.)
   Version: 2.0.0
-  Last modified: July 9th 2006
+  Last modified: January 12th 2007
+       modified: July 9th 2006
   Maintainers: 
                Chris Lyttle <chris@wilddev.net>
   Author:
@@ -2081,7 +2082,11 @@
           </mediaobject>
         </screenshot>
 
+        <para>If after the import the screen is blank, go to <guimenu>File -&gt; New -&gt; New Accounts page</guimenu>
+         to display a new Accounts tab.</para>
+
         <para>Save your file.</para>
+
       </listitem>
     </orderedlist>
   </sect1>
