@@ -1,7 +1,7 @@
 <!--
       (Do not remove this comment block.)
   Version: 2.0.0
-  Last modified: November 27th 2006
+  Last modified: January 10th 2007
        modified: July 9th 2006
   Maintainers: 
                Chris Lyttle <chris@wilddev.net>
@@ -838,7 +838,7 @@ Income
       <screenshot id="invest-setup-portfolio2">
         <mediaobject>
           <imageobject>
-            <imagedata fileref="figures/invest_setup_portfolio2.png"
+            <imagedata fileref="figures/invest_SetupPortfolio2.png"
                        format="PNG" srccredit="Dave Herman" ></imagedata>
           </imageobject>
 
