@@ -1,0 +1,206 @@
+!Type:Cat
+NClothes2
+E
+^
+NComputer:HW
+E
+^
+NComputer:ISP
+E
+^
+NEntertainment:Disco
+E
+^
+NEntertainment:Dining Out
+E
+^
+NFurniture
+E
+^
+NGifts
+E
+^
+NGroceries
+E
+^
+NRent
+E
+^
+NBonus
+I
+^
+N
+NSalary
+I
+^
+!Option:AutoSwitch
+!Account
+NAssets:Current Assets:Checking Account
+DChecking account
+TBank
+^
+!Type:Bank
+D01/01/2006
+T1000.00
+POpening Balance
+LEquity:Opening Balances
+CX
+^
+D12/01/2006
+T-50.00
+CX
+N101
+PGrocery Store
+LExpenses:Groceries
+^
+D15/01/2006
+T-150.00
+CX
+PGrocery Store
+LExpenses:Groceries
+^
+D25/01/2006
+T600.00
+CX
+PEmployers R Us
+LIncome:Salary
+^
+D26/01/2006
+T-200.00
+CX
+PBank Saving
+LAssets:Current Assets:Savings Account
+^
+D28/01/2006
+T-350.00
+N102
+CX
+PFebruary Rent
+LExpenses:Rent
+^
+D28/01/2006
+T-20.00
+CX
+PISP Subscription
+LExpenses:Computer:ISP
+^
+D13/02/2006
+T-124.00
+CX
+PGrocery Store
+LExpenses:Groceries
+^
+D25/02/2006
+T600.00
+PEmployers R Us
+LIncome:Salary
+^
+D26/02/2006
+T-200.00
+PBank Saving
+LAssets:Current Assets:Savings Account
+^
+D28/02/2006
+T-350.00
+N103
+PMarch Rent
+LExpenses:Rent
+^
+D28/02/2006
+T-20.00
+CX
+PISP Subscription
+LExpenses:Computer:ISP
+^
+D10/02/2006
+T-67.00
+CX
+PGrocery Store
+LExpenses:Groceries
+^
+D15/02/2006
+T-276.00
+PPaid Credit Card bill
+LLiabilities:Credit Card:Visa
+^
+D20/02/2006
+T-90.00
+CX
+PGrocery Store
+LExpenses:Groceries
+^
+D15/03/2006
+T-1024.99
+PPaid Credit Card bill
+LLiabilities:Credit Card:Visa
+^
+D25/03/2006
+T700.00
+PEmployers R Us
+LIncome:Salary
+SIncome:Salary
+EBase Salary
+$600
+SIncome:Bonus
+EYearly bonus
+$2000
+^
+D26/03/2006
+T-200.00
+PBank Saving
+LAssets:Current Assets:Savings Account
+^
+D28/03/2006
+T-350.00
+CX
+PApril Rent
+LExpenses:Rent
+^
+D28/03/2006
+T-20.00
+CX
+PISP Subscription
+LExpenses:Computer:ISP
+^^
+!Option:AutoSwitch
+!Account
+NLiabilities:Credit Card:Visa
+DVISA
+TCCard
+^
+!Type:CCard
+D01/01/2006
+T-200
+PParty 4 Us
+LExpenses:Entertainment:Dining Out
+^
+D01/01/2006
+T-76
+PDiscotime
+LExpenses:Entertainment:Disco
+^
+D14/02/2006
+T-24.99
+PFlower R Us
+LExpenses:Gifts
+^
+D22/02/2006
+T-1000.00
+PFurniture R Us
+LExpenses:Furniture
+^
+D05/03/2006
+T-96.75
+PDinner 4 Us
+LExpenses:Entertainment:Dining Out
+^
+D09/03/2006
+T-2000.00
+PLaptop R Us
+LExpenses:Computer:HW
+^
+D12/03/2006
+T-120.00
+PClothes R Us
+LExpenses:Clothes
+^
