@@ -1,3 +1,11 @@
+2007-02-18  Chris Lyttle  <chris@wilddev.net>
+	
+	* guide/C/ch_invest.xml: Added update from Dave Herman
+	* guide/C/ch_basics.xml: Added update from Dave Herman
+	* guide/C/figures/invest_SetupPortfolio2.png: Add from DH
+	* guide/C/figures/basics_AccountsSampleQIF.png: Add from DH
+	* guide/C/gnc_Sample_QIF.qif: Add from DH
+
 2006-11-27  Christian Stimming <stimming@tuhh.de>
 
 	* guide/C/ch_loans.xml: Added update from Dave Herman
